--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="description_video_play">Play button for video</string>
+    <string name="description_detail_poster">Poster Image of the show you clicked</string>
+    <string name="add_favorites_text">Add to Favorites:</string>
 </resources>
