feat: fixes and details setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="description_video_play">Play button for video</string>
     <string name="description_detail_poster">Poster Image of the show you clicked</string>
     <string name="add_favorites_text">Add to Favorites:</string>
+    <string name="no_internet_connection">No internet Connectivity. Please connect and try again</string>
+    <string name="trailer_not_available_error">Trailer not available</string>
 </resources>
