--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
         </item>
     </string-array>
     <string name="preferences_key">order</string>
-    <string name="sort_by">Sort By</string>
+    <string name="sort_by">Settings</string>
     <string name="added_favorites">Added to Favourites</string>
     <string name="removed_favourites">Removed from Favourites</string>
     <string name="appwidget_text">EXAMPLE</string>
@@ -68,4 +68,13 @@
     <string name="no">No</string>
     <string name="job_tag">quote</string>
     <string name="add_to_widget">Added to Widget</string>
+    <string name="enabled">Enabled</string>
+    <string name="disabled">Disabled</string>
+    <string name="once_day">Once a day</string>
+    <string name="twice_day">Twice a day</string>
+    <string name="thrice_day">Thrice a day</string>
+    <string name="msg_quote_once">Quotes set to receive one time in a Day</string>
+    <string name="msg_quote_twice">Quotes set to receive two time in a Day</string>
+    <string name="msg_quote_thrice">Quotes set to receive three time in a Day</string>
+    <string name="quote_today">Quote for today</string>
 </resources>
