--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,9 @@
     <string name="time_key">time</string>
     <string name="switch_title">Receive Quotes</string>
     <string name="time_preference_title">Time picker for Quotes</string>
+    <string name="desc_widget">Floating button to add the movie on widget.</string>
+    <string name="share_quote_desc">Floating Button for sharing the quote.</string>
+    <string name="title_widget">Title: </string>
+    <string name="release_widget">Release: </string>
+    <string name="rating_widget">Rating: </string>
 </resources>
